--- a/style.css
+++ b/style.css
@@ -1,106 +1,106 @@
 .widget {
-  width: 620px;
-  font-size: 12px;
-  line-height: 1.5;
+	width: 620px;
+	font-size: 12px;
+	line-height: 1.5;
 }
 
 .buttons {
-  margin: 8px 0;
+	margin: 8px 0;
 }
 
 .start, .length {
-  width: 50px;
+	width: 50px;
 }
 
 .widget pre {
-  margin: 0;
-  padding: 0;
-  background: inherit;
-  border: none;
+	margin: 0;
+	padding: 0;
+	background: inherit;
+	border: none;
 }
 
 .code {
-  margin: 0 0 6px 0;
-  padding: 6px;
-  border: 1px solid black;
-  font-family: monospace;
-  font-size: 11px;
-  width: auto;
-  min-width: 420px;
-  height: 350px;
-  overflow: auto;
-  float: left;
+	margin: 0 0 6px 0;
+	padding: 6px;
+	border: 1px solid black;
+	font-family: monospace;
+	font-size: 11px;
+	width: auto;
+	min-width: 420px;
+	height: 350px;
+	overflow: auto;
+	float: left;
 }
 
 .c64 {
-  border: 1px solid #A891FD;
-  background-color: #694BD0;
-  color: #A891FD;
-  font-family: c64;
-  font-size: 10px;	
+	border: 1px solid #A891FD;
+	background-color: #694BD0;
+	color: #A891FD;
+	font-family: c64;
+	font-size: 10px;	
 }
 
 .screen {
-  float: right;
+	float: right;
 }
 
 .debugger {
-  border: 1px black solid;
-  margin-top: 6px;
-  padding: 3px;
-  padding-top: 8px;
-  height: 152px;
-  width: 192px;
-  text-align: center;
-  float: right;
+	border: 1px black solid;
+	margin-top: 6px;
+	padding: 3px;
+	padding-top: 8px;
+	height: 152px;
+	width: 192px;
+	text-align: center;
+	float: right;
 }
 
 .minidebugger {
-  margin: 0;
-  margin-top: 6px;
-  padding: 0;
-  font-family: monospace;
-  font-size: 11px;
+	margin: 0;
+	margin-top: 6px;
+	padding: 0;
+	font-family: monospace;
+	font-size: 11px;
 }
 
 .monitorControls {
-  width: 587px;
-  clear: both;
-  margin-bottom: 10px;
-  padding: 0;
+	float: left;
+	display: table-cell;
+	margin-bottom: 10px;
+	padding: 0;
 }
 
 .monitorControls input {
-  margin-right: 0.5em;
+	margin-right: 0.5em;
 }
 
 .monitor {
-  margin: 10px 0;
-  padding: 6px;
-  border: 1px solid #999;
-  background-color: #ddd;
-  width: 587px;
-  height: 100px;
-  overflow: auto;
-  display: none;
+	margin: 10px 0;
+	padding: 6px;
+	border: 1px solid #999;
+	background-color: #ddd;
+	width: 620px;
+	height: 100px;
+	overflow: auto;
+	display: none;
 }
 
 .monitor-invalid {
-  border: 1px inset #c00;
-  padding: 2px 1px;
+	border: 1px inset #c00;
+	padding: 2px 1px;
 }
 
 .messages {
-  margin: 0;
-  padding: 6px;
-  border: 1px solid #999;
-  background-color: #eee;
-  overflow: auto;
-  width: 620px;
-  height: 100px;
-  text-align: left;
-  font-size: 12px;
-  color: #444;
+	margin: 0;
+	padding: 6px;
+	border: 1px solid #999;
+	background-color: #eee;
+	overflow: auto;
+	width: 620px;
+	height: 100px;
+	text-align: left;
+	font-size: 12px;
+	color: #444;
 }
 
 /* https://github.com/danjuls/frontend-magic/blob/master/app/fonts/c64-webfont.woff */
@@ -197,3 +197,17 @@ pre {
 	margin-right: 8px;
 	border: 1px solid black;
 }
+
+.frequencyControls {
+	float: left;
+	display: table-cell;
+	width: 50%;
+	margin-top: 2px; /* this positively sucks */
+}
+
+.frequency {
+	vertical-align:middle;
+	width: 60%;
+}
+
+
